--- a/style.css
+++ b/style.css
@@ -1,200 +1,98 @@
-@font-face {
-  font-family: 'Roboto';
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-  url(font/Roboto-100.woff2) format('woff2'),
-  url(font/Roboto-100.ttf) format('truetype');
-  unicode-range: U+0000-00FF;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato:300|Roboto+Mono:300');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-header,
-section,
-ul,
-.float-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
+body {
+  background-color: #FFF;
+  font-family: 'Roboto Mono', monospace;
+  text-rendering: optimizeLegibility;
 }
-ul {
+
+#splash {
   position: absolute;
-  list-style: none;
-  top: 10px;
-}
-ul li {
-  display: inline-block;
-  margin: 2px;
-  width: 40px;
-}
-ul a {
-  cursor: pointer;
-}
-ul svg {
-  height: 45px;
-  width: 45px;
-  border: none;
-  display: inline-block;
-  padding: 4px;
-  cursor: pointer;
-  fill: #333;
+  right: 7%;
+  bottom: 7%;
+  text-align: right;
+  font-size: 40px;
+  font-family: 'Lato', sans-serif;
+  color: #333;
 }
 
-#about-svg {
-  width: 38px;
-  height: 38px;
-  margin-top: 5px;
+#title {
+  opacity: 0.3;
+  margin-top: -10px;
 }
 
-i {
-  display: block;
-  cursor: pointer;
+a {
+  text-transform: uppercase;
+  color: #3598d6;
+  text-decoration: none;
 }
 
-.arrow {
+.modal {
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  flex-flow: column nowrap;
+  background-color: #333;
+  opacity: 0;
+  z-index: -999;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid #FFF;
+  transition: opacity 1s ease,z-index 0.01s cubic-bezier(0.77, 0, 0.175, 1);
+
+}
+
+.modal-row {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  align-items: flex-start;
+
+}
+.menu-close {
   position: absolute;
   bottom: 0;
-  width: 40px;
-  height: 60px;
-  margin-left: -20px;
-  left: 50%;
+  letter-spacing: 34;
+}
+.menu > a:before {
+  content: '+';
+  padding-right: 0.75em;
 }
 
-.bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
+.modal > a:before {
+  content: '-';
+  padding-right: 0.75em;
 }
 
-span {
-  font-family: fontawesome, sans-serif;
-  font-size: 30px;
-  color: rgb(51,51,51);
-  position: relative;
-  top: 27%;
-  margin-right: 20px;
-  left: 23px;
-  text-shadow: none;
-  transition: text-shadow 1s ease;
-}
 
-header,
-section,
-ul,
-.float-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
-}
-header,
-section {
-  height: 100vh;
-  background: #F3F3F3;
-  color: #333;
-  font-family: 'Roboto', 'Open Sans', sans-serif;
-  font-weight: 100;
-  text-align: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-h1 {
-  font-weight: 100;
-  font-size: 5em;
-}
-#title {
-  font-size: 30px;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.float-container {
-  position: fixed;
-  bottom: 20px;
-}
-
-#about {
-  color: #F3F3F3;
-  background-color: #333;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-@-moz-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -moz-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -moz-transform: translateY(-30px);
-    transform: translateY(-30px);
-  }
-  60% {
-    -moz-transform: translateY(-15px);
-    transform: translateY(-15px);
-  }
-}
-@-webkit-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -webkit-transform: translateY(-30px);
-    transform: translateY(-30px);
-  }
-  60% {
-    -webkit-transform: translateY(-15px);
-    transform: translateY(-15px);
-  }
-}
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -moz-transform: translateY(-30px);
-    -ms-transform: translateY(-30px);
-    -webkit-transform: translateY(-30px);
-    transform: translateY(-30px);
-  }
-  60% {
-    -moz-transform: translateY(-15px);
-    -ms-transform: translateY(-15px);
-    -webkit-transform: translateY(-15px);
-    transform: translateY(-15px);
+@media only screen and (max-width: 868px) {
+  #splash {
+    text-align: left;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    font-size: 20px;
   }
 }
 
-@media (max-width: 400px) {
-  h1 {
-    font-size: 3em;
+@media only screen and (max-width: 468px) {
+  #splash {
+    font-size: 18px;
   }
 }
+
+/*
+blue: #76d4fb
+another blue: #3598d6
+*/
